<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".MainActivity">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_coffee"
            android:layout_span="2"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name"/>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_name"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_choice"/>

        <RadioGroup
            android:id="@+id/sizeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sizeRadioSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_small"/>

            <RadioButton
                android:id="@+id/sizeRadioMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_medium"/>

            <RadioButton
                android:id="@+id/sizeRadioLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_large"/>
        </RadioGroup>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_choice"/>

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/typeRadioEspresso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_espresso" />

            <RadioButton
                android:id="@+id/typeRadioMacchiato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_macchiato" />

            <RadioButton
                android:id="@+id/typeRadioAmericano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_americano" />

            <RadioButton
                android:id="@+id/typeRadioLatte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_latte" />

            <RadioButton
                android:id="@+id/typeRadioCappuccino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_cappuccino" />
        </RadioGroup>
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:text="@string/order_now" />
    </TableRow>
</TableLayout>